   - Add SymbolMapper, for transforming specific symbols in specific files.
   - Allow SymbolTransforms to cause a symbol to be discarded.
 * Enhance symbol strategy capabilities:
   - Write each CVS branch/tag to be written to an arbitrary SVN path.
   - Choose which trunk/branch should serve as the parent of each branch/tag.
   - --symbol-hints: manually specify how symbols should be converted.
 * --write-symbol-info: output info about CVS symbols.
 * Add option ctx.decode_apple_single for handling AppleSingle-encoded files.

 Bugs fixed:
 * Fix issue #80: Empty CVS,v file not accepted.
 * Fix issue #108: Create project TTB directories "just-in-time".
 * Fix issue #112: Random test failures with Python 2.5.
 * Fix issue #115: crash - Bad file descriptor.
 * Fix the translation of line-end characters for eol-styles CR and CRLF.

 Improvements and output changes:
 * Create trunk/tags/branches directories for project when project is created.
 * Improved conversion speed significantly, especially for large repositories.
 * Ignore (with a warning) symbols defined to malformed revision numbers.
 * Tolerate multiple definitions of a symbol to the same revision number.
 * Handle RCS files that superfluously set the default branch to trunk.

 Miscellaneous:


Version 2.0.1 (04 October 2007)
-------------------------------

 Bugs fixed:
 * Fix problem with keyword expansion when using --use-internal-co.


Version 2.0.0 (15 August 2007)
------------------------------

 New features:
 * Add --use-internal-co to speed conversions, and make it the default.
 * Add --retain-conflicting-attic-files option.
 * Add --no-cross-branch-commits option.
 * Add --default-eol option and deprecate --no-default-eol.
 * RevisionRecorder hook allows file text/deltas to be recorded in pass 1.
 * RevisionReader hook allow file text to be retrieved from RevisionRecorder.
 * Slightly changed the order that properties are set, for more flexibility.